dynamodb integration
- Created new serverless configuration for dynamodb and lambda (store) services
- Created new lambda endpoint createProduct
- Updated lambda enpoints to use dynamodb service
- Updated api docs
