# serverless.ts
@@ -1,38 +1,0 @@
-import type { AWS } from '@serverless/typescript';
-import { getProductsList, getProductsById } from '@functions/products';
-
-const serverlessConfiguration: AWS = {
-  service: 'shop-cloudx-backend',
-  frameworkVersion: '3',
-  plugins: ['serverless-esbuild'],
-  provider: {
-    name: 'aws',
-    runtime: 'nodejs14.x',
-    region: 'us-east-2',
-    apiGateway: {
-      minimumCompressionSize: 1024,
-      shouldStartNameWithService: true,
-    },
-    environment: {
-      AWS_NODEJS_CONNECTION_REUSE_ENABLED: '1',
-      NODE_OPTIONS: '--enable-source-maps --stack-trace-limit=1000',
-    },
-  },
-  // import the function via paths
-  functions: { getProductsList, getProductsById },
-  package: { individually: true },
-  custom: {
-    esbuild: {
-      bundle: true,
-      minify: false,
-      sourcemap: true,
-      exclude: ['aws-sdk'],
-      target: 'node14',
-      define: { 'require.resolve': undefined },
-      platform: 'node',
-      concurrency: 10,
-    },
-  },
-};
-
-module.exports = serverlessConfiguration;
